load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "quokka_lib",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/jrgalyan/quokka",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
    ],
)

# Tests

go_test(
    name = "quokka_test",
    srcs = glob(["*_test.go"]),
    data = ["LICENSE"],
    importpath = "github.com/jrgalyan/quokka_test",
    pure = "on",
    deps = [
        "//:quokka_lib",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
