module(name = "quokka")

# Use bzlmod to bring in rules_go and gazelle
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.44.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_jwt_jwt_v5",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.25.1",
)
